# BinClock

./: CMakeLists.txt  run  script.mc  test.cpp
src/: instructions.cpp  instructions.hpp  main.cpp  yes.mc
src/lexer/: lexer.cpp  lexer.hpp
src/utils/: files.cpp  files.hpp  output.hpp  split.cpp  split.hpp  string.hpp
